--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -7,7 +7,7 @@ import { SITE } from 'astrowind:config';
 >
   <div style="padding: 0px ;">
     <div style="float:left;">
-      <img src="/src/assets/images/OIG1.jpeg" height="150" width="150" alt="Olimnisa Logo" />
+      <img src="~/assets/images/OIG1.jpeg" height="150" width="150" alt="Olimnisa Logo" />
     </div>
     <div style="float:right;margin-top: 20%;">
       <h1>Olimnisa</h1>
