--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,7 +2,7 @@
 ---
 
 <span
-  class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
-  image={{ src: '~/assets/images/logo.jpeg', alt: 'Logo' }}
-  >
+  class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"></span>
+  <img src="~/assets/images/logo.jpeg" alt='Logo' />
+  
 </span>
