--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,8 +1,8 @@
 ---
+import { Image } from 'astro:assets';
 ---
 
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"></span>
-  <img src="~/assets/images/logo.jpeg" alt='Logo' />
-  
+  <Image src="/images/logo.jpeg" alt="A logo." width="150" height="150" />  
 </span>
