remove logo background

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,5 @@
 ---
 import { Image } from "astro:assets";
-import Logo from "../assets/images/logo3.png";
+import Logo from "../assets/images/logo-black-transparent-with-text.png";
 ---
-
-<Image src={Logo} alt="descriptive text"/>
+<Image src={Logo} alt="descriptive text" width="150" height="150"/>
