--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Germany</span> requires more than 100 thousand medical doctors to fill MD vacancies in hospitals and clinics. Migrate to German, work as doctors and be part of world leading health provider in the heartland of Europe</span
+        <span class="font-semibold">Germany</span> requires more than 100 thousand medical doctors to fill MD vacancies in hospitals and clinics. Migrate to Germany, join the 457 Indonesian doctors currently working there and be part of world leading health provider in the heartland of Europe</span
       >
       <p></p><span class="block mb-1 sm:hidden font-bold text-blue-600">Work as MD with equivalent pay to German doctors.</span>
       We work as recruiters for German hospitals with more than 50 specialist residency programs to choose from. Whether consulting or applying, everything is free of charge.</p>
@@ -52,13 +52,13 @@ const metadata = {
       {
         title: 'Specialist Residency',
         description:
-          'In Germany virtually all MDs will take part in specialist residency program which is free of charge.',
+          'In Germany virtually all MDs will take part in specialist residency program which is free of charge. From the moment you start working as junior doctor you can also begin your specialist residency. ',
         icon: 'tabler:list-check',
       },
       {
         title: 'Equal pay',
         description:
-          'Germany has stringent anti discrimination law. Your salary, working conditions and incentives will be identical to German doctors.',
+          'Germany has stringent anti discrimination law. Doctors educated in Indonesia are treated as equal and your salary, working conditions and incentives will be identical to German doctors.',
         icon: 'tabler:components',
       },
       {
@@ -210,7 +210,7 @@ const metadata = {
         },
       },
       {
-        testimonial: `She transformed our brand identity with her creative finesse, capturing our essence in every element. Her dedication and talent truly shine through her work.`,
+        testimonial: ``,
         name: 'Irzadi Siregar',
         job: 'Partner in Indonesia',
         image: {
@@ -230,39 +230,39 @@ const metadata = {
 
   <FAQs
     title="Frequently Asked Questions"
-    subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
+    subtitle="If you have any other questions, please do not hesitate in contacting us"
     tagline="FAQs"
     classes={{ container: 'max-w-6xl' }}
     items={[
       {
-        title: 'Why AstroWind?',
+        title: 'Are your services really free?',
         description:
-          "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
+          "Yes, we work for the clinics and hospitals in recruiting Indonesian doctors. Therefore they are the ones paying us.",
       },
       {
-        title: 'What do I need to start?',
+        title: 'Am I guaranteed to get a job as doctor?',
         description:
-          'Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds. Many say exploration is part of our destiny, but it’s actually our duty to future generations.',
+          'If you are a doctor, yes.  ',
       },
       {
-        title: 'How to install the Astro + Tailwind CSS template?',
+        title: 'Am I guaranteed to get a specialist residency?',
         description:
-          "Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows.",
+          "Since junior doctors in Germany all have to take a specialization then yes. However if you insisnt on living in a specific city / region or wish to take a rare specilization then it might take more time to place you in a specialist residency",
       },
       {
-        title: "What's something that you don't understand?",
+        title: "Why is my medical school curriculum needed?",
         description:
-          "A flower in my garden, a mystery in my panties. Heart attack never stopped old Big Bear. I didn't even know we were calling him Big Bear.",
+          "Your medical school’s curriculum will be thoroughly examined in order to check whether there are essential differences between German and Indonesian curriculum by the state’s medical doctor association. This is the same organization which is authorized to give you a permanent work permit as a medical doctor.",
       },
       {
-        title: 'What is something that you would like to try again?',
+        title: 'Is Approbation valid throughout all of Germany?',
         description:
-          "A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don't know who you're talking to, so let me clue you in.",
+          "Yes! Not only in Germany but the whole of European Union and in Switzerland.",
       },
       {
-        title: 'If you could only ask one question to each person you meet, what would that question be?',
+        title: 'How long does Work Permit and/or Approbation process take?',
         description:
-          "This is not about revenge. This is about justice. A lot of things can change in twelve years, Admiral. Well, that's certainly good to know. About four years. I got tired of hearing how young I looked.",
+          "Temporary work permit process usually takes **at least** six weeks. Once you get your visa and work permit you can start working as Junior Doctors in Germany. While working there, the Approbation process will start which for doctors from Indonesia can take more than one year.",
       },
     ]}
   />
@@ -271,10 +271,10 @@ const metadata = {
 
   <Stats
     stats={[
-      { title: 'Downloads', amount: '132K' },
-      { title: 'Stars', amount: '24.8K' },
-      { title: 'Forks', amount: '10.3K' },
-      { title: 'Users', amount: '48.4K' },
+      { title: 'Foreign Doctors', amount: '64k' },
+      { title: 'Open position for doctors', amount: '98k' },
+      { title: 'Indonesian doctors in Germany', amount: '457' },
+      { title: 'Indonesian doctors starting last year', amount: '37' },
     ]}
   />
 
@@ -283,21 +283,20 @@ const metadata = {
   <CallToAction
     actions={[
       {
-        variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        variant : 'primary',
+        text: 'irzadi@gmail.com',
+        href: 'mailto:irzadi@gmail.com',
         target: '_blank',
-        icon: 'tabler:download',
+        icon: 'tabler:mail',
       },
     ]}
   >
     <Fragment slot="title">
-      Astro&nbsp;+&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Tailwind CSS</span>
+      Interested?<br class="block sm:hidden" /><span class="sm:whitespace-nowrap"> Contact us!</span>
     </Fragment>
 
     <Fragment slot="subtitle">
-      Be very surprised by these huge fake numbers you are seeing on this page. <br class="hidden md:inline" />Don't
-      waste more time! :P
+      You can also reach us by Whatsapp : +62 822 1556 7770
     </Fragment>
   </CallToAction>
 </Layout>
